# Cellular_Automata_HPC

./: CMakeLists.txt  CUDAgeneration.cu  MPIarraylife.hpp  README.md  arraylife.hpp  build.sh  export.hpp  goslurm_life  hashlife.hpp  import.hpp  life.hpp  lifecore.hpp  main.cpp  main.hpp
outs/: 0par.out  CUDA-output.out  Default-output.out  MPI.out  OMP-output.out  OMP.out
resources/: ArrayGlider-100.life  Hash-Glider-100.life  halfMax.life  sawtooth.life  turingmachine.life
